# website

./: .gitignore  .gitmodules  404.html  CNAME  LICENSE  Makefile  PING.txt  PRO.html  README.md  SUBDOMAINS.txt  about.html  base.html  build  build.py  editor.html  eleventy.config.js  f.py  grid-lanes-polyfill.js  hehe.html  index.html  justfile  package.json  pelicanconf.py  pnpm-lock.yaml  privacy.html  publishconf.py  pyproject.toml  root.css  root.js  sync_vault.py  templates.py  test.html  vault.toml
.github/workflows/: gh-pages.yml  pinger.yml
assets/css/: blog.css  post.css
assets/js/: blog.js  subdomain_loader.js  test.js
blog/: 1.html  2.html  css-responsive-scale.html  hsm.html  index.html  nmk.html  post.css  pyaw.html  python-packaging.html  santa.html  test.html  welcome.html
content/: projects.md
content/blog/: Hello, World!.md
content/pages/: index.md
content/projects/: another.md  example.md
css/: core.css
data/: colors.json  projects.json
js/: grid-lanes-polyfill.js  root.js  visitor.js
kewlos/: index.html
legacy/: base.html  editor.html  index.html  test.html
plugins/: mistune_reader.py  photos_from_dir.py  projects_reader.py
projects/: editor.html  index.html  note.html  pinboard.html  test.html
projects/2tetris/: index.css  index.html  index.js  tetris.js
projects/editor/: .build  full.html  index.html  test.html
projects/note/: jtmp.js
static/: page.css
static/css/: page.css  root.css
templates/: 404.html  about.html  base.html  editor.html  index.html  privacy.html  test.html
tw-mirror/: index.html
(+61 files in other folders)
